--- a/public/principal.html
+++ b/public/principal.html
@@ -5,6 +5,12 @@
     <title>Alura Typer</title>
 </head>
 <body>
-    <!-- Seja bem vindo ao curso de jQuery :) -->
+    <h1>Alura Typer</h1>
+    <p class="frase">Esta frase tem cinco palavras</p>
+    
+    <ul class="informacoes">
+     <li>5 palavras</li>
+     <li>10 segundos</li>   
+    </ul>
 </body>
 </html>
