--- a/public/principal.html
+++ b/public/principal.html
@@ -9,8 +9,11 @@
     <p class="frase">Esta frase tem cinco palavras</p>
     
     <ul class="informacoes">
-     <li>5 palavras</li>
-     <li>10 segundos</li>   
+        <li>5 palavras</li>
+        <li>10 segundos</li>   
     </ul>
+
+    <script src="js/jquery.js"></script>
+    <script src="js/main.js"></script>
 </body>
 </html>
