:art: code beauty

--- a/public/principal.html
+++ b/public/principal.html
@@ -6,10 +6,16 @@
 </head>
 <body>
     <h1>Alura Typer</h1>
-    <p class="frase">Esta frase tem cinco palavras</p>
+    <p class="frase">Lorem ipsum dolor sit amet, consectetur adipiscing 
+        elit, sed do eiusmod tempor incididunt 
+        ut labore et dolore magna aliqua. Ut enim ad minim veniam, 
+        quis nostrud exercitation ullamco 
+        laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in 
+        voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat 
+        non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</p>
     
     <ul class="informacoes">
-        <li>5 palavras</li>
+        <li><span id="tamanhoFrase">5</span> palavras</li>
         <li>10 segundos</li>   
     </ul>
 
