--- a/public/principal.html
+++ b/public/principal.html
@@ -6,19 +6,18 @@
 </head>
 <body>
     <h1>Alura Typer</h1>
-    <p class="frase">Lorem ipsum dolor sit amet, consectetur adipiscing 
-        elit, sed do eiusmod tempor incididunt 
-        ut labore et dolore magna aliqua. Ut enim ad minim veniam, 
-        quis nostrud exercitation ullamco 
-        laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in 
-        voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat 
-        non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</p>
+    <p class="frase">Esta frase tem oito belas e grandiosas palavras.</p>
     
     <ul class="informacoes">
-        <li><span id="tamanhoFrase">5</span> palavras</li>
-        <li>10 segundos</li>   
+        <li><span id="tamanho-frase">5</span> palavras</li>
+        <li><span id="tempo-digitacao">10</span> segundos</li>   
     </ul>
+    <textarea class="campo-digitacao" cols="30" rows="10"></textarea>
 
+    <ul>
+        <li><span id="contador-caracteres">0</span> caracteres</li>
+        <li><span id="contador-palavras">0</span> palavras</li>
+    </ul>
     <script src="js/jquery.js"></script>
     <script src="js/main.js"></script>
 </body>
